--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
     <main>
         <h1>Minimalism at its finest.</h1>
-        <p> –– SHOP ALL</p>
+        <p> –––– SHOP ALL</p>
         <img src="./assets/img/1.jpeg" alt="">
         <img src="./assets/img/2.jpeg" alt="">
         <img src="./assets/img/3.jpeg" alt="">
