--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <span><i class="fab fa-adversal fa-lg"></i></span>
+        <span>M</span>
         <p>LOG IN/SIGN UP</p>
         <a href="#" class="navbar"></a>
         <nav>
@@ -40,6 +40,8 @@
             <i class="fab fa-instagram-square fa-2x"></i>
             <i class="fab fa-twitter-square fa-2x"></i>
         </span>
+        <i class="fas fa-chevron-circle-left fa-2x"></i>
+        <i class="fas fa-chevron-circle-right fa-2x"></i>
     </footer>
 </body>
 </html>
